# progetto

./: README.md  START.py  app.py  db.py  main.py  pyproject.toml  utils.py
functions/: daily_statistics.py  hourly_analysis.py  test.py  welcome.py  your_skipass.py
others/: commenti.txt
pages/: analisi.py  prova.py  welcome.py
