[project]
name = "progetto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.4.1",
    "colorspace>=1.0.0",
    "icecream>=2.1.3",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "polars>=1.13.1",
    "streamlit>=1.40.1",
]
